--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     @apply bg-white rounded overflow-hidden shadow-md relative;
 }
 .badge{
-    @apply bg-secondary-100 text-secondary-200 text-xs font-bold rounded-full p-2 absolute top-0 ml-2 mt-2;
+    @apply bg-secondary-100 text-secondary-200 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2;
 }
 .btn{
     @apply rounded-full py-2 px-3 uppercase font-bold cursor-pointer tracking-wider;
